apply plugin: 'java'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
	jcenter()
}

dependencies {
	testCompile 'junit:junit:4.12'
}


jar {
    manifest {
        attributes(
        	"Author": "Frederic Fays",
        	'Premain-Class': 'eu.fays.sandbox.objsize.ObjectSizeEssay',
			'Main-Class': 'eu.fays.sandbox.objsize.ObjectSizeEssay'
		)
    }
}


task printDeps {
	group 'essay'
	description = "Displays the libraries associated to 'testCompile'"
	doLast {
		println "Dependencies:"
		configurations.testCompile.each { println it }
	}
}

task artifacts {
	group = "essay"
	description = "Displays the artifacts associated with each configuration of " + project
	doFirst {
		configurations.findAll().each { config ->
			println "${config}:"
			config.each { file -> println "" + file}
			println ' '
		}
	}
}
